--- a/pub/proof/tex/proof.tex
+++ b/pub/proof/tex/proof.tex
@@ -1,6 +1,6 @@
 %
 % AUTHOR:		ing. T.M.C. Ruiter
-% COPYRIGHT(c)	2020-2022 by T.M.C. Ruiter
+% COPYRIGHT(c)	2020-2023 by T.M.C. Ruiter
 %
 \input{tex/layout.tex}
 \input{tex/macros.tex}
@@ -8,14 +8,14 @@
 \begin{titlepage}
 \title{\TIMO - Secure Login without Passwords}
 \author{T.M.C. Ruiter}
-\date{July 2022}
+\date{2023}
 \maketitle
 \begin{center}
 %\vspace*{-.5em}
 %\textbf{XORkey - The key to the Internet}\\
 %\vspace{1em}
 \small
-Copyright \copyright\ 2014-2022 by T.M.C. Ruiter\\
+Copyright \copyright\ 2014-2023 by T.M.C. Ruiter\\
 Terschelling 19 - 1967 EC - Heemskerk - The Netherlands\\
 +31 6 536 94 994 - timo.ruiter@dandorid.nl
 \normalsize
@@ -24,8 +24,9 @@ Terschelling 19 - 1967 EC - Heemskerk - The Netherlands\\
 \includesection{intro}
 \includesection{random}
 \includesection{keyring}
-\includesection{login}
-\includesection{keyop}
+\includesection{rudimentarylogin}
+\includesection{serverkeyop}
+\includesection{userkeyop}
 \includesection{protocol}
 \bibliographystyle{alpha}
 \bibliography{proof}
