Intermediate save and cleanup.

--- a/pub/proof/tex/intro.tex
+++ b/pub/proof/tex/intro.tex
@@ -147,6 +147,10 @@ Statistically, the average time to find a key is half the time to test them all.
 If you are kept busy, testing all keys, for at least two years the chances to find it within one year
 (after which further testing is useless)
 are 50\% at best.
+\begin{dialogue}
+\speak{Melvin Udall}	What if this is as good as it gets?
+\attrib{As good as it gets, 1997}
+\end{dialogue}
 This is the upper limit; this is as good as it gets.
 \par
 Suppose you could keep up, and really do 7200 test per hour, and nothing is prohibiting you to carry on for a full year.
@@ -173,7 +177,7 @@ But a single failed login attempt can be detected easily, and it signifies an im
 the user currently attemtping to login does not have the right key.
 Therefore, we can assume this user will not recover the right key in an instant,
 so further login attempts can be blocked for a minute or so.
-In this case, brute force attempts are useless, unless a denial of serivce is wanted.
+In this case, brute force attempts are useless.
 \begin{moafu}
 Failing to provide the right key for a login will trigger a delay,
 before another attempt can be made.
