--- a/pub/proof/tex/user_hash.sub.tex
+++ b/pub/proof/tex/user_hash.sub.tex
@@ -66,9 +66,9 @@ e.g. by using biometric data instead of the userid.
 \speak{Smokey} Yeah, but--
 \speak{Walter} Am I wrong!?
 \speak{Smokey} Yeah, but I wasn't over.  Gimme the marker, Dude,  I'm marking it an eight.
-\par\medskip\direct{Walter takes out a gun.}
+\par\medskip\direct{Walter takes out a pistol.}
 \speak{Walter} Smokey my friend, you're entering a world of pain.
-\attrib{The Big Lebowski}
+\attrib{The Big Lebowski, 1998}
 \end{dialogue}
 We set \(H_1\) to zero to eliminate it (\(\xor{a}{0} = a\)),
 \[H_1 = 0\]
@@ -83,7 +83,7 @@ We could add a voice recording:
 \par\medskip\direct{Laser gun comes out from the ceiling and points at Helen, who gasps.}
 \speak{Edna} And guest.
 \par\medskip\direct{The laser gun retracts}
-\attrib{{Incredibles 2}\ \normalcitations\cite{fandom:incrediblestwo}}
+\attrib{Incredibles 2, 2018}
 \end{dialogue}
 and compute (in some way):
 \[H_3 = \HSHA{\text{``Edna\ Mode\ldots\ and\ guest''}}\]
